<resources>
    <string name="app_name">Npc Manager</string>
    <string name="title_activity_add_person">addPersonActivity</string>

    <string name="title_activity_add_person_actiity">addPersonActiity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="deceased">Deceased</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="home">Home</string>
    <string name="load">Load</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="person">Person</string>
    <string name="occupation">Occupation</string>
    <string name="organization">Organization</string>
    <string name="quest">Quest</string>
    <string name="race">Race</string>
    <string name="save">Save</string>
    <string name="New">New</string>
    <string name="delete">Delete</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
